syntax = "proto3";
package pb;

option go_package = ".;pb";

message Block {
    uint64 BlockIndex       = 1;
    bytes ParentHash        = 2;
    bytes TransactionHash   = 3;
    bytes StateHash       = 4;
    int64 Timestamp         = 5;

    repeated TransactionWithData    Transactions    = 6;
    repeated bytes            States                = 7;
}

message Transaction {
    uint32 TransactionType         = 1;
    
    bytes Account       = 2;
    uint64 Sequence     = 3;
    int64 Amount       = 4;
    int64 Gas          = 5;
    bytes Destination   = 6;
    bytes Payload       = 7;

    bytes PublicKey     = 8;
    bytes Signature     = 9;

    int64 Timestamp     = 10;
    repeated string Tags = 11;
    string Name          = 12;
    string Value         = 13;
    string Device        = 14;
}

message Receipt {
    uint32 TransactionIndex  = 1;
    uint32 TransactionResult = 2;

    repeated bytes States   = 3;
}

message AccountState {
    uint32 StateType  = 1;
    uint64 BlockIndex = 2;

    bytes Account     = 3;
    uint64 Sequence   = 4;
    int64 Amount      = 5;
}

message CurrencyState {
    uint32 StateType    = 1;
    uint64 BlockIndex   = 2;

    bytes Account       = 3;
    uint64 Sequence     = 4;

	string Name         = 5;
	string Symbol       = 6; 
	uint32 Decimals     = 7;
	int64 TotalSupply   = 8;
}

message TransactionWithData {
    Transaction Transaction   = 1;
    Receipt Receipt           = 2;
}